metadata/force-app/main/default/objects/Account/fields/Andrea__c.field-meta.xml
<CustomField>
    <fullName>Andrea__c</fullName>
    <label>Andrea</label>
    <length>40</length>
    <type>Text</type>
</CustomField>