metadata/force-app/main/default/objects/Account/fields/BillingEmail__c.field-meta.xml
<CustomField>
    <fullName>BillingEmail__c</fullName>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>