metadata/force-app/main/default/objects/Account/fields/ccrz__CustomField1__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CustomField1__c</fullName>
    <label>Custom Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>