metadata/force-app/main/default/objects/Account/fields/ccrz__E_AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__E_AccountGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Group</label>
    <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>