metadata/force-app/main/default/objects/Account/fields/ccrz__PreventAddrBookSave__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PreventAddrBookSave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, users cannot save new addresses to the address book.</description>
    <label>Prevent Address Book Saves</label>
    <type>Checkbox</type>
</CustomField>