metadata/force-app/main/default/objects/Account/fields/ccrz__PreventNewBillAddrCO__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PreventNewBillAddrCO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the user should not be able to add new billing addresses during checkout</description>
    <label>Prevent New Checkout Billing Address</label>
    <type>Checkbox</type>
</CustomField>