metadata/force-app/main/default/objects/Account/fields/ccrz__TaxExemptAccount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TaxExemptAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the field to indicate whether an account is tax exempt.</description>
    <inlineHelpText>This is the field to indicate whether an account is tax exempt.</inlineHelpText>
    <label>TaxExemptAccount</label>
    <type>Checkbox</type>
</CustomField>