metadata/force-app/main/default/objects/Account/fields/CorporateLocations__c.field-meta.xml
<CustomField>
    <fullName>CorporateLocations__c</fullName>
    <label>Corporate Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>