metadata/force-app/main/default/objects/Account/fields/Custom_Account_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Custom_Account_Picklist__c</fullName>
    <label>Custom Account Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>