metadata/force-app/main/default/objects/Account/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <length>40</length>
    <type>Text</type>
</CustomField>