metadata/force-app/main/default/objects/Account/fields/email_custom__c.field-meta.xml
<CustomField>
    <fullName>email_custom__c</fullName>
    <label>email custom</label>
    <type>Email</type>
</CustomField>