metadata/force-app/main/default/objects/Account/fields/New_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Field__c</fullName>
    <label>New Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>