metadata/force-app/main/default/objects/Account/fields/new_global__c.field-meta.xml
<CustomField>
    <fullName>new_global__c</fullName>
    <label>new global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Global</valueSetName>
    </valueSet>
</CustomField>