metadata/force-app/main/default/objects/Account/fields/ProdID__c.field-meta.xml
<CustomField>
    <fullName>ProdID__c</fullName>
    <externalId>true</externalId>
    <label>ProdID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>