metadata/force-app/main/default/objects/Account/fields/source_only__c.field-meta.xml
<CustomField>
    <fullName>source_only__c</fullName>
    <label>source only</label>
    <length>40</length>
    <type>Text</type>
</CustomField>