metadata/force-app/main/default/objects/Account/fields/Spinach_Salad__c.field-meta.xml
<CustomField>
    <fullName>Spinach_Salad__c</fullName>
    <label>Spinach Salad</label>
    <length>40</length>
    <type>Text</type>
</CustomField>