metadata/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.EMPLOYEES</columns>
    <columns>CorporateLocations__c</columns>
    <columns>FranchiseLocations__c</columns>
    <columns>TaxID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>